# stock-prediction

./: pyproject.toml  run.py  stock_prediciton.sh
app/: main.py
features/: __init__.py
ingestion/: __init__.py  build_tables.sql  ingestion_pipeline.sh  run.py
models/: random_forest.py
prediction/: prediction.py  server.sh
utils/: __init__.py
